app/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: frankamente
  name: frankamente
  namespace: frankamente
spec:
  host: "PATCH_ME"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frankamente
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
...
